--- a/homepage/homepage.css
+++ b/homepage/homepage.css
@@ -86,6 +86,14 @@ h2 {
     width: 90%;
     margin: auto;
     box-shadow: 10px 10px 55px -25px rgba(0,0,0,0.75);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    /* transform: translateY(100px); */
+    /* transition: opacity 0.1s ease-out, transform 0.1s ease-out;  */
+}
+
+.card:hover{
+    transform: scale(1.05); /* Scale up the card */
+    box-shadow: 0px 5px 15px rgb(247, 0, 0);
 }
 
 main h2, header h2 {
@@ -107,6 +115,19 @@ main {
     font-size: 3rem;
     padding: 3rem 0.8rem 4rem 0.8rem;
 }
+
+.card__screenshot img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensures image fills the container */
+    display: block;
+    transition: transform 0.3s ease;
+}
+
+.card:hover .card__screenshot img {
+    transform: scale(1.1); 
+  }
+
 
 .card:nth-of-type(1) .card__screenshot {
     background-color: rgb(142, 132, 238);
@@ -137,7 +158,7 @@ main {
 }
 
 .card:nth-of-type(8) .card__screenshot {
-    background-color: rgb(30, 10, 244);
+    background-color: rgb(95, 83, 231);
 }
 
 .card:nth-of-type(9) .card__screenshot {
